src/objects/JBCXM__GSCockpitConfig__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Config__c</fullName>
        <description>To store JSON configuration</description>
        <label>Configuration</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>EntityType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Cockpit Config By Relationship Type</relationshipLabel>
        <relationshipName>CockpitConfigByRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cockpit Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cockpit Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>